@@ -1,4 +1,5 @@
 ver 0.20.4 (not yet released)
+* workaround for GCC 4.9 "constexpr" bug
 
 ver 0.20.3 (2017/01/25)
 * protocol
